--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 :root{
   --font-color:#F93C3CD6;
+  --responsive-font:calc(16px + 6 * ((100vw - 320px) / 680)) !important;
 }
 
 /* width */
@@ -34,6 +35,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color:var(--font-color);
+  overflow-x: hidden;
 
 }
 
