--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -4,7 +4,7 @@
     justify-content: center;
     grid-gap:2vw;
     padding:3%;
-    box-shadow: 0px 2px 6px;
+    box-shadow: 1px 2px 6px grey;
 }
 .about > div:nth-child(1){
     flex: 3;
