--- a/src/components/projects/projects.component.css
+++ b/src/components/projects/projects.component.css
@@ -1,8 +1,10 @@
 #Projects{
     display:grid;
     grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-    padding:0% 5% 0% 5%;
+    padding:0% 5% 5% 5%;
     grid-gap:2vw;
+    box-shadow: 1px 4px 7px grey;
+    background: whitesmoke;
 }
 #Projects >div {
     margin:0 auto 0 auto;
