--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -5,6 +5,8 @@
     grid-gap:2vw;
     padding:3%;
     box-shadow: 1px 2px 6px grey;
+    background: white;
+    border-bottom: 1px solid #8080809c;
 }
 .about > div:nth-child(1){
     flex: 3;
@@ -21,4 +23,26 @@
     border-top: 4px solid #f941418f;
     border-right: 4px solid #f941418f;
     border-left: 4px solid #f941418f;
+}
+#titleProject{
+    color:white;
+    margin: 0;
+    padding: 2%;
+    text-align:center;
+    font-size:3rem;
+    color:white;
+    text-shadow:1px 1px 2px #f94249;
+    background: #00000038
+}
+
+@media only screen and (max-width: 600px) {
+
+  .App{
+       background-attachment: unset !important;   
+  }
+  #titleProject{
+      color:unset !important;
+      background:whitesmoke;
+      text-shadow: unset !important;
+  }
 }
