--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -4,8 +4,7 @@
     align-items: center;
     justify-content: center;
     grid-gap: 1vw;
-    margin: 3%;
-   
+    background: #0000005e;
 }
 #Contact >div > h2{
     font-size: 3rem;
@@ -19,7 +18,6 @@
     align-items: center;
     flex-wrap: wrap;
     grid-gap: 2vw;
-    width: 100%;
     max-width: 700px;
 }
 #Contact >div > div > *:nth-child(1){
@@ -46,11 +44,20 @@
     color:white;
     background-color: #4E39CC;
     padding: 2%;
-    font-size: 1rem;
+    font-size: 1.1rem;
     margin-top:2%;
 }
 @media screen and (max-width: 600px) {
   #Contact >div{
     width:90%;
   }
+  #Contact >div >div{
+      flex-direction: column;
+      align-items: unset;
+  }
+#Contact >div > div > *:nth-child(2){
+  width: 97%;
+}
+
+
 }
