--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -6,6 +6,14 @@
     grid-gap: 1vw;
     background: #0000005e;
 }
+#Contact >div:nth-child(1){
+    background:rgb(255 255 255 / 90%);
+    padding:2%;
+    box-shadow:1px 3px 4px grey;
+    min-width:35%;
+    border-radius:5px;
+    margin:3%;
+}
 #Contact >div > h2{
     font-size: 3rem;
     margin:0;
@@ -17,7 +25,7 @@
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    grid-gap: 2vw;
+    grid-gap: 1vw;
     max-width: 700px;
 }
 #Contact >div > div > *:nth-child(1){
@@ -54,10 +62,13 @@
   #Contact >div >div{
       flex-direction: column;
       align-items: unset;
+      margin: 10px;
   }
-#Contact >div > div > *:nth-child(2){
-  width: 97%;
-}
-
+  #Contact >div > div > *:nth-child(2){
+    width: 97%;
+  }
+  #Contact >div > div > *:nth-child(1){
+      margin: 0;
+  } 
 
 }
